style.css
@font-face {
    font-family: "Poppins";
    font-weight: normal;
    src: url(./assets/fonts/Poppins-Regular.woff2);
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    background-color: #202020;
    font-family: "Poppins";
}

body {
    display: flex;
    gap: 5rem;
    align-items: center;
    justify-content: center;
    height: 100dvh;
    margin: 0 auto;
    width: 100%;
}

section {
    width: 50%;
    height: 100%;
}

#builder {
    display: grid;
    place-items: center;
}

#template {
    width: 540px;
    height: 540px;
    background-color: rgb(0, 0, 0);
    position: relative;
    z-index: 1;
}

#background-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: none;
}

#text-box {
    width: 80%;
    height: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); 
    display: flex;
    flex-direction: column;
    z-index: 3;
    background-color: #ffffff00;
    justify-content: center;
    align-items: center;
}

#main-text {
    font-size: 17rem;
    color: white;
    background-color: #ffffff00;
}

#description-text {
    font-size: 2.5rem;
    font-weight: bold;
    font-family: 'Century Gothic';
    color: white;
    background-color: #ffffff00;
}

input {
    color: white;
}

.input-box {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.input-box > label {
    color: white;
}

.input-box > input, input[type='color'] {
    border: none;
}

.input-box__input {
    display: flex;
    border: 1px solid rgba(233, 233, 233, 0.74);
    padding: 0.5rem;
}

.input-box__input > :first-child {
    width: 90%;
    border: none;
}

#gray-overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #0000002c;
    z-index: 2;
}

#builder-settings {
    display: grid;
    place-items: center;
}

#settings {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1.5rem;    
    width: 550px;
}

#settings > * {
    width: 100%;
}

#button-box {
    display: flex;
    gap: 1rem;
}

button {
    border: none;
    border-radius: 20px;
    padding: 0.5rem 1rem;
    background-color: white;
    cursor: pointer;
    height: fit-content;
}

@media screen and (orientation: portrait) {
    body {
        flex-direction: column;
        gap: 0;
    }
    section {
        width: 100%;
        height: 50%;
    }
    #template {
        width: 90%;
        background-color: red;
    } 
    #settings {
        width: 95%;
    }
}

